--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "beautiful-react-ui": "^0.57.1",
     "d3-drag": "^3.0.0",
     "install": "^0.13.0",
+    "loglevel": "^1.8.1",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-d3-graph": "^2.6.0",
