The BT manager received the proper world files

--- a/frontend/src/components/header_menu/launch/gra_config.json
+++ b/frontend/src/components/header_menu/launch/gra_config.json
@@ -1,7 +1,7 @@
 {
   "application": {
     "type": "python",
-    "entry_point": "workspace/worlds/patata.py",
+    "entry_point": "workspace/worlds/bypass.py",
     "params": {
       "circuit": "default"
     }
